--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,67 @@
+
+
 .App {
   text-align: center;
 }
+
+#root {
+  display: flex;
+  justify-content: center;
+}
+
+
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
 }
 
-.character-profile {
-  max-width: 65%;
-  margin: auto;
+.character-pic-border {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+
+.character-profile-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: rgb(37, 186, 206);
+  max-width: 80%;
+  margin: 2rem;
+  padding: 2rem;
+  
+  
+}
+
+
+
+h2 {
+  background-color: rgb(34, 130, 219);
+  max-width: 100%;
+  margin: 2rem;
+  padding: 5rem;
+}
+
+.character-profile-container img {
+  max-width: 100%;
+  border-radius: 25%;
+  
+}
+
+
+.photo-and-name {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: black;
+}
+
+.vitals {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
+}
+
+
 /* write your parent styles in here for your App.js */
