--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-image: url('./images/rm-bg.jpg');
-  background-size: cover;
+  background-size: 300vh;
 }
+
+
 
