--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Ruge+Boogie&display=swap');
 
 .App {
   text-align: center;
+  /* background-image: url('./images/rm-bg.jpg'); */
+  background-color: rgb(177, 149, 149);
+  font-family: 'Ruge Boogie', cursive;
+  font-size: 1.25rem;
+
 }
 
 #root {
@@ -13,6 +19,7 @@
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
+  
 }
 
 .character-pic-border {
@@ -26,7 +33,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: rgb(37, 186, 206);
+  background-color: rgb(54, 203, 91);
   max-width: 80%;
   margin: 2rem;
   padding: 2rem;
@@ -37,7 +44,7 @@
 
 
 h2 {
-  background-color: rgb(34, 130, 219);
+  background-color: rgb(232, 227, 233);
   max-width: 100%;
   margin: 2rem;
   padding: 5rem;
@@ -57,10 +64,17 @@ h2 {
   background-color: black;
 }
 
+.label {
+  font-weight: 700;
+  font-family: 'Cabin Sketch', cursive;
+}
+
 .vitals {
   display: flex;
   flex-direction: column;
+  align-content: flex-start;
   margin: 2rem;
+  background-color: rgb(137, 216, 64);
 }
 
 
